--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-core:17.5.1'
     implementation 'com.google.firebase:firebase-database:19.5.0'
+    //autenticação por email
     implementation 'com.google.firebase:firebase-auth:19.4.0'
 
 }
